<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/sort"
        android:title="@string/menu_sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_sort_creation_date"
                android:title="@string/menu_sort_creation_date" />
            <item
                android:id="@+id/menu_sort_eta"
                android:title="@string/menu_sort_eta" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_btn_generate_note"
        android:title="@string/menu_btn_generate_note" />
    <item
        android:id="@+id/menu_btn_delete_all_note"
        android:title="@string/menu_btn_delete_all_note" />
</menu>